[impl] plan mtc task

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,6 +26,7 @@ include_directories(
 
 add_library(${PROJECT_NAME}
   src/initialize_mtc_task.cpp
+  src/plan_mtc_task.cpp
 )
 
 add_executable(btcpp_sample main.cpp)
