--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,6 +28,7 @@ add_library(${PROJECT_NAME}
   src/initialize_mtc_task.cpp
   src/plan_mtc_task.cpp
   src/create_mtc_current_state.cpp
+  src/move_mtc_stage_to_container.cpp
 )
 
 add_executable(btcpp_sample main.cpp)
