--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,9 +26,10 @@ include_directories(
 
 add_library(${PROJECT_NAME}
   src/initialize_mtc_task.cpp
+  src/create_mtc_pipeline_planner.cpp
 )
 
-add_executable(btcpp_sample main.cpp)
+add_executable(test_bt_mtc main.cpp)
 
-target_include_directories(btcpp_sample PRIVATE ${catkin_INCLUDE_DIRS})
-target_link_libraries(btcpp_sample ${catkin_LIBRARIES})
+target_include_directories(test_bt_mtc PRIVATE ${catkin_INCLUDE_DIRS} include)
+target_link_libraries(test_bt_mtc ${PROJECT_NAME} ${catkin_LIBRARIES})
