--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,35 +4,41 @@ project(behaviortree_mtc LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-find_package(catkin REQUIRED COMPONENTS
-    behaviortree_cpp
-    moveit_task_constructor_core
-)
+# Find dependencies
+find_package(ament_cmake REQUIRED)
+find_package(behaviortree_cpp REQUIRED)
+find_package(moveit_task_constructor_core REQUIRED)
+find_package(rclcpp REQUIRED)
 
-catkin_package(
-  LIBRARIES
-    ${PROJECT_NAME}
-  INCLUDE_DIRS
-    include
-  CATKIN_DEPENDS
-    behaviortree_cpp
-    moveit_task_constructor_core
-)
+# Include directories
+include_directories(include)
 
-include_directories(
-  include
-  ${catkin_INCLUDE_DIRS}
-)
-
-add_library(${PROJECT_NAME}
-  src/initialize_mtc_task.cpp
-  src/plan_mtc_task.cpp
+# Create library
+add_library(bt_demo_lib
   src/create_mtc_current_state.cpp
   src/create_mtc_pipeline_planner.cpp
+  src/initialize_mtc_task.cpp
   src/move_mtc_stage_to_container.cpp
+  src/plan_mtc_task.cpp
 )
 
-add_executable(bt_demo examples/bt_demo.cpp)
+ament_target_dependencies(bt_demo_lib
+  behaviortree_cpp
+  moveit_task_constructor_core
+  rclcpp
+)
 
-target_include_directories(bt_demo PRIVATE ${catkin_INCLUDE_DIRS} include)
-target_link_libraries(bt_demo ${PROJECT_NAME} ${catkin_LIBRARIES})
+# Create executable
+add_executable(bt_demo examples/bt_demo.cpp)
+target_link_libraries(bt_demo bt_demo_lib)
+
+# Install targets
+install(TARGETS
+  bt_demo
+  bt_demo_lib
+  RUNTIME DESTINATION lib/${PROJECT_NAME}
+  ARCHIVE DESTINATION lib/${PROJECT_NAME}
+  LIBRARY DESTINATION lib/${PROJECT_NAME}
+)
+
+ament_package()
