--- a/package.xml
+++ b/package.xml
@@ -4,12 +4,14 @@
   <description>Use MoveIt Task Constructor with BehaviorTree.CPP</description>
 
   <maintainer email="captain.yoshisaur@gmail.com">Captain Yoshi</maintainer>
+  <maintainer email="d.garcialopez@hotmail.com">Daniel Garcia Lopez</maintainer>
   <license>MIT</license>
   <author>Captain Yoshi</author>
 
-  <buildtool_depend>catkin</buildtool_depend>
+  <buildtool_depend>ament_cmake</buildtool_depend>
 
   <depend>behaviortree_cpp</depend>
   <depend>moveit_task_constructor_core</depend>
+  <depend>rclcpp</depend>
 
 </package>
