--- a/package.xml
+++ b/package.xml
@@ -10,6 +10,7 @@
   <buildtool_depend>catkin</buildtool_depend>
 
   <depend>behaviortree_cpp</depend>
+  <depend>geometry_msgs</depend>
   <depend>moveit_task_constructor_core</depend>
 
 </package>
