--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,6 +31,7 @@ add_library(${PROJECT_NAME}
   src/initialize_mtc_task.cpp
   src/plan_mtc_task.cpp
   src/create_mtc_current_state.cpp
+  src/create_mtc_move_relative.cpp
   src/create_mtc_pipeline_planner.cpp
   src/move_mtc_stage_to_container.cpp
 )
