--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,7 @@ add_library(${PROJECT_NAME}
   src/create_mtc_move_relative.cpp
   src/create_mtc_pipeline_planner.cpp
   src/move_mtc_stage_to_container.cpp
+  src/create_mtc_cartesian_path.cpp
 )
 
 add_executable(bt_demo examples/bt_demo.cpp)
