--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,6 +40,7 @@ add_library(${PROJECT_NAME}
   src/create_mtc_joint_interpolation.cpp
   src/create_mtc_serial_container.cpp
   src/move_mtc_container_to_parent_container.cpp
+  src/create_mtc_connect.cpp
 )
 
 add_executable(bt_demo examples/bt_demo.cpp)
