--- a/package.xml
+++ b/package.xml
@@ -13,4 +13,6 @@
   <depend>geometry_msgs</depend>
   <depend>moveit_task_constructor_core</depend>
 
+  <test_depend>rosunit</test_depend>
+  <test_depend>rostest</test_depend>
 </package>
