--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,9 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 find_package(catkin REQUIRED COMPONENTS
     behaviortree_cpp
     geometry_msgs
+    moveit_msgs
     moveit_task_constructor_core
+    moveit_ros_planning_interface
 )
 
 catkin_package(
@@ -18,7 +20,9 @@ catkin_package(
   CATKIN_DEPENDS
     behaviortree_cpp
     geometry_msgs
+    moveit_msgs
     moveit_task_constructor_core
+    moveit_ros_planning_interface
 )
 
 include_directories(
@@ -31,6 +35,7 @@ add_library(${PROJECT_NAME}
   src/geometry_msgs.cpp
 
   # mtc
+  src/add_object_to_planning_scene.cpp
   src/create_mtc_connect.cpp
   src/create_mtc_current_state.cpp
   src/create_mtc_modify_planning_scene.cpp
@@ -41,18 +46,24 @@ add_library(${PROJECT_NAME}
   src/create_mtc_generate_grasp_pose.cpp
   src/create_mtc_joint_interpolation.cpp
   src/create_mtc_serial_container.cpp
+  src/create_planning_scene_interface.cpp
   src/get_mtc_raw_stage.cpp
   src/initialize_mtc_task.cpp
+  src/moveit_msgs.cpp
   src/move_mtc_stage_to_container.cpp
   src/move_mtc_container_to_parent_container.cpp
   src/plan_mtc_task.cpp
 )
 
+add_executable(bt_create_collision_object examples/bt_create_collision_object.cpp)
 add_executable(bt_demo examples/bt_demo.cpp)
 add_executable(bt_joint_interpolation_solver examples/bt_joint_interpolation_solver.cpp)
 add_executable(bt_move_relative examples/bt_move_relative.cpp)
 add_executable(bt_move_to examples/bt_move_to.cpp)
 add_executable(bt_serial_container examples/bt_serial_container.cpp)
+
+target_include_directories(bt_create_collision_object PRIVATE ${catkin_INCLUDE_DIRS} include)
+target_link_libraries(bt_create_collision_object ${PROJECT_NAME} ${catkin_LIBRARIES})
 
 target_include_directories(bt_demo PRIVATE ${catkin_INCLUDE_DIRS} include)
 target_link_libraries(bt_demo ${PROJECT_NAME} ${catkin_LIBRARIES})
