--- a/package.xml
+++ b/package.xml
@@ -11,6 +11,8 @@
 
   <depend>behaviortree_cpp</depend>
   <depend>geometry_msgs</depend>
+  <depend>moveit_msgs</depend>
+  <depend>moveit_ros_planning_interface</depend>
   <depend>moveit_task_constructor_core</depend>
 
   <test_depend>rosunit</test_depend>
