--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,15 +52,21 @@ add_library(${PROJECT_NAME}
   src/moveit_msgs.cpp
   src/move_mtc_stage_to_container.cpp
   src/move_mtc_container_to_parent_container.cpp
+  src/mtc_allow_collisions.cpp
+  src/mtc_get_links_with_collision_geometry
   src/plan_mtc_task.cpp
 )
 
+add_executable(bt_allow_collisions examples/bt_allow_collisions.cpp)
 add_executable(bt_create_collision_object examples/bt_create_collision_object.cpp)
 add_executable(bt_demo examples/bt_demo.cpp)
 add_executable(bt_joint_interpolation_solver examples/bt_joint_interpolation_solver.cpp)
 add_executable(bt_move_relative examples/bt_move_relative.cpp)
 add_executable(bt_move_to examples/bt_move_to.cpp)
 add_executable(bt_serial_container examples/bt_serial_container.cpp)
+
+target_include_directories(bt_allow_collisions PRIVATE ${catkin_INCLUDE_DIRS} include)
+target_link_libraries(bt_allow_collisions ${PROJECT_NAME} ${catkin_LIBRARIES})
 
 target_include_directories(bt_create_collision_object PRIVATE ${catkin_INCLUDE_DIRS} include)
 target_link_libraries(bt_create_collision_object ${PROJECT_NAME} ${catkin_LIBRARIES})
