--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,6 +45,7 @@ add_library(${PROJECT_NAME}
   src/create_mtc_pipeline_planner.cpp
   src/create_mtc_cartesian_path.cpp
   src/create_mtc_generate_grasp_pose.cpp
+  src/create_mtc_generate_place_pose.cpp
   src/create_mtc_joint_interpolation.cpp
   src/create_mtc_serial_container.cpp
   src/create_planning_scene_interface.cpp
@@ -60,6 +61,7 @@ add_executable(bt_allow_collisions examples/bt_allow_collisions.cpp)
 add_executable(bt_compute_ik examples/bt_compute_ik.cpp)
 add_executable(bt_create_collision_object examples/bt_create_collision_object.cpp)
 add_executable(bt_demo examples/bt_demo.cpp)
+add_executable(bt_generate_place_pose examples/bt_generate_place_pose.cpp)
 add_executable(bt_joint_interpolation_solver examples/bt_joint_interpolation_solver.cpp)
 add_executable(bt_move_relative examples/bt_move_relative.cpp)
 add_executable(bt_move_to examples/bt_move_to.cpp)
@@ -70,11 +72,17 @@ target_link_libraries(bt_allow_collisions ${PROJECT_NAME} ${catkin_LIBRARIES})
 target_include_directories(bt_compute_ik PRIVATE ${catkin_INCLUDE_DIRS} include)
 target_link_libraries(bt_compute_ik ${PROJECT_NAME} ${catkin_LIBRARIES})
 
+target_include_directories(bt_compute_ik PRIVATE ${catkin_INCLUDE_DIRS} include)
+target_link_libraries(bt_compute_ik ${PROJECT_NAME} ${catkin_LIBRARIES})
+
 target_include_directories(bt_create_collision_object PRIVATE ${catkin_INCLUDE_DIRS} include)
 target_link_libraries(bt_create_collision_object ${PROJECT_NAME} ${catkin_LIBRARIES})
 
 target_include_directories(bt_demo PRIVATE ${catkin_INCLUDE_DIRS} include)
 target_link_libraries(bt_demo ${PROJECT_NAME} ${catkin_LIBRARIES})
+
+target_include_directories(bt_generate_place_pose PRIVATE ${catkin_INCLUDE_DIRS} include)
+target_link_libraries(bt_generate_place_pose ${PROJECT_NAME} ${catkin_LIBRARIES})
 
 target_include_directories(bt_joint_interpolation_solver PRIVATE ${catkin_INCLUDE_DIRS} include)
 target_link_libraries(bt_joint_interpolation_solver ${PROJECT_NAME} ${catkin_LIBRARIES})
