Pass properties by their parent

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,6 +63,7 @@ add_executable(bt_generate_place_pose examples/bt_generate_place_pose.cpp)
 add_executable(bt_joint_interpolation_solver examples/bt_joint_interpolation_solver.cpp)
 add_executable(bt_move_relative examples/bt_move_relative.cpp)
 add_executable(bt_move_to examples/bt_move_to.cpp)
+add_executable(bt_pick_place examples/bt_pick_place.cpp)
 add_executable(bt_serial_container examples/bt_serial_container.cpp)
 add_executable(generate_xml_model src/generate_xml_model.cpp)
 
@@ -86,6 +87,9 @@ target_link_libraries(bt_joint_interpolation_solver ${PROJECT_NAME} ${catkin_LIB
 
 target_include_directories(bt_move_relative PRIVATE ${catkin_INCLUDE_DIRS} include)
 target_link_libraries(bt_move_relative ${PROJECT_NAME} ${catkin_LIBRARIES})
+
+target_include_directories(bt_pick_place PRIVATE ${catkin_INCLUDE_DIRS} include)
+target_link_libraries(bt_pick_place ${PROJECT_NAME} ${catkin_LIBRARIES})
 
 target_include_directories(bt_move_to PRIVATE ${catkin_INCLUDE_DIRS} include)
 target_link_libraries(bt_move_to ${PROJECT_NAME} ${catkin_LIBRARIES})
