Port recent updates to ROS 2

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,51 +4,99 @@ project(behaviortree_mtc LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-# Find dependencies
 find_package(ament_cmake REQUIRED)
 find_package(behaviortree_cpp REQUIRED)
 find_package(geometry_msgs REQUIRED)
 find_package(moveit_task_constructor_core REQUIRED)
 find_package(rclcpp REQUIRED)
 
-# Include directories
-include_directories(include)
-
-# Create library
-add_library(bt_lib
-  src/geometry_msgs.cpp
-  src/get_mtc_raw_stage.cpp
-  src/initialize_mtc_task.cpp
-  src/plan_mtc_task.cpp
-  src/create_mtc_current_state.cpp
-  src/create_mtc_move_relative.cpp
-  src/create_mtc_pipeline_planner.cpp
-  src/move_mtc_stage_to_container.cpp
-  src/create_mtc_cartesian_path.cpp
+include_directories(
+  include 
+  # include/${PROJECT_NAME}
 )
 
-ament_target_dependencies(bt_lib
+# Create library
+add_library(${PROJECT_NAME}
+  # utilities
+  src/geometry_msgs.cpp
+
+  # mtc
+  src/add_object_to_planning_scene.cpp
+  src/create_mtc_compute_ik.cpp
+  src/create_mtc_connect.cpp
+  src/create_mtc_current_state.cpp
+  src/create_mtc_modify_planning_scene.cpp
+  src/create_mtc_move_relative.cpp
+  src/create_mtc_move_to.cpp
+  src/create_mtc_pipeline_planner.cpp
+  src/create_mtc_cartesian_path.cpp
+  src/create_mtc_generate_grasp_pose.cpp
+  src/create_mtc_generate_place_pose.cpp
+  src/create_mtc_joint_interpolation.cpp
+  src/create_mtc_serial_container.cpp
+  src/create_planning_scene_interface.cpp
+  src/get_mtc_raw_stage.cpp
+  src/initialize_mtc_task.cpp
+  src/moveit_msgs.cpp
+  src/move_mtc_stage_to_container.cpp
+  src/move_mtc_container_to_parent_container.cpp
+  src/plan_mtc_task.cpp
+)
+
+ament_target_dependencies(${PROJECT_NAME} 
   behaviortree_cpp
   geometry_msgs
   moveit_task_constructor_core
   rclcpp
 )
 
-# Create executable
+add_executable(bt_allow_collisions examples/bt_allow_collisions.cpp)
+target_link_libraries(bt_allow_collisions ${PROJECT_NAME} )
+
+add_executable(bt_create_collision_object examples/bt_create_collision_object.cpp)
+target_link_libraries(bt_create_collision_object ${PROJECT_NAME} )
+
+add_executable(bt_compute_ik examples/bt_compute_ik.cpp)
+target_link_libraries(bt_compute_ik ${PROJECT_NAME} )
+
 add_executable(bt_demo examples/bt_demo.cpp)
-target_link_libraries(bt_demo bt_lib)
+target_link_libraries(bt_demo ${PROJECT_NAME} )
+
+add_executable(bt_generate_place_pose examples/bt_generate_place_pose.cpp)
+target_link_libraries(bt_generate_place_pose ${PROJECT_NAME} )
+
+add_executable(bt_joint_interpolation_solver examples/bt_joint_interpolation_solver.cpp)
+target_link_libraries(bt_joint_interpolation_solver ${PROJECT_NAME} )
 
 add_executable(bt_move_relative examples/bt_move_relative.cpp)
-target_link_libraries(bt_move_relative bt_lib)
+target_link_libraries(bt_move_relative ${PROJECT_NAME} )
 
-# Install targets
+add_executable(bt_move_to examples/bt_move_to.cpp)
+target_link_libraries(bt_move_to ${PROJECT_NAME} )
+
+add_executable(bt_serial_container examples/bt_serial_container.cpp)
+target_link_libraries(bt_serial_container ${PROJECT_NAME} )
+
+if(BUILD_TESTING)
+  add_subdirectory(tests)
+endif()
+
 install(TARGETS
+  ${PROJECT_NAME} 
+  bt_allow_collisions
+  bt_create_collision_object
+  bt_compute_ik
   bt_demo
+  bt_generate_place_pose
+  bt_joint_interpolation_solver
   bt_move_relative
-  bt_lib
+  bt_move_to
+  bt_serial_container
   RUNTIME DESTINATION lib/${PROJECT_NAME}
   ARCHIVE DESTINATION lib/${PROJECT_NAME}
   LIBRARY DESTINATION lib/${PROJECT_NAME}
 )
 
+ament_export_include_directories(include)
+ament_export_libraries(${PROJECT_NAME})
 ament_package()
