--- a/package.xml
+++ b/package.xml
@@ -17,6 +17,9 @@
   <depend>moveit_task_constructor_core</depend>
   <depend>rclcpp</depend>
 
-  <test_depend>rosunit</test_depend>
-  <test_depend>rostest</test_depend>
+  <test_depend>ament_cmake_gtest</test_depend>
+
+  <export>
+    <build_type>ament_cmake</build_type>
+  </export>
 </package>
