--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -7,11 +7,18 @@ set(BT_MTC_TESTS
 )
 
 set(TEST_DEPENDECIES
+    gtest_utils
     ${PROJECT_NAME}
 )
 
 if(CATKIN_ENABLE_TESTING)
     find_package(rostest REQUIRED)
+
+
+
+
+    add_library(gtest_utils models.cpp stage_mockups.cpp)
+    target_link_libraries(gtest_utils ${PROJECT_NAME})
 
     catkin_add_gtest(${PROJECT_NAME}_test ${BT_MTC_TESTS})
     target_link_libraries(${PROJECT_NAME}_test
