Make MTC planning preemptable (#26)
We must stop the planning thread fast when the halt() method is invoked.
https://www.behaviortree.dev/docs/guides/asynchronous_nodes#the-problem-with-multi-threading

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -4,14 +4,22 @@
 set(BT_MTC_TESTS
   gtest_mtc_properties.cpp
   gtest_mtc_modify_planning_scene.cpp
+  gtest_plan_mtc_task.cpp
 )
 
 set(TEST_DEPENDECIES
+    gtest_utils
     ${PROJECT_NAME}
 )
 
 if(CATKIN_ENABLE_TESTING)
     find_package(rostest REQUIRED)
+
+
+
+
+    add_library(gtest_utils models.cpp stage_mockups.cpp)
+    target_link_libraries(gtest_utils ${PROJECT_NAME})
 
     catkin_add_gtest(${PROJECT_NAME}_test ${BT_MTC_TESTS})
     target_link_libraries(${PROJECT_NAME}_test
