[fix] filepath not found

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,6 +62,7 @@ target_compile_definitions(bt_pick_place PRIVATE PROJECT_WS="${CMAKE_CURRENT_SOU
 add_executable(generate_xml_model src/bt/generate_xml_model.cpp)
 target_include_directories(generate_xml_model PRIVATE ${catkin_INCLUDE_DIRS} include)
 target_link_libraries(generate_xml_model ${PROJECT_NAME} ${catkin_LIBRARIES})
+target_compile_definitions(generate_xml_model PRIVATE PROJECT_WS="${CMAKE_CURRENT_SOURCE_DIR}")
 
 
 add_subdirectory(tests)
